changed structure and started working on the title page

--- a/index.tex
+++ b/index.tex
@@ -1,11 +1,24 @@
-\documentclass[12pt,a4paper,draft]{report}
+\documentclass[12pt,a4paper,oneside,draft]{report}
+\input{./includes/font.tex}
 % meta
-\author{Halil I. Köklü}
+\author{Halil I. K"okl"u}
 \title{A Multi-Purpose Recommender System}
 \date{April 2014}
 % document
 \begin{document}
 
-\maketitle
+\input{./meta/title.tex}
+\clearpage
+\setcounter{page}{1}
+\input{./meta/declaration.tex}
+
+\input{./sections/abstract.tex}
+
+\input{./meta/toc.tex}
+
+% sections
+
+\input{./meta/bibl.tex}
+\input{./sections/appendix.tex}
 
 \end{document}
