finished titlepage, started with table of contents and general structure

--- a/index.tex
+++ b/index.tex
@@ -1,24 +1,26 @@
 \documentclass[12pt,a4paper,oneside,draft]{report}
-\input{./includes/font.tex}
+\input{./includes/config.tex}
 % meta
-\author{Halil I. K"okl"u}
 \title{A Multi-Purpose Recommender System}
+\author{Halil I. K{\"o}kl{\"u}}
 \date{April 2014}
+\def\supervisor{Nigel Martin}
 % document
 \begin{document}
 
 \input{./meta/title.tex}
+
 \clearpage
 \setcounter{page}{1}
-\input{./meta/declaration.tex}
-
-\input{./sections/abstract.tex}
 
 \input{./meta/toc.tex}
 
 % sections
 
+\input{./sections/introduction.tex}
+\input{./sections/background.tex}
+\input{./sections/problem.tex}
+\input{./sections/solution.tex}
 \input{./meta/bibl.tex}
-\input{./sections/appendix.tex}
 
 \end{document}
