--- a/meta/title.tex
+++ b/meta/title.tex
@@ -1,16 +1,31 @@
-\begin{title}
-A Multi-Purpose Recommender System
+\begin{center}
 
-by \author
-\date
+\thispagestyle{empty}
+\null
+\vfill
+
+\LARGE
+\textbf{\thetitle}
+\large
+
+\vspace{0.5in}
+
+\textbf{\theauthor}\\
+Supervised by \supervisor\\
+\thedate
+
+\vspace{0.5in}
 
 A Project Proposal Submitted to\\
 Birkbeck College, University of London\\
 in Partial Fulfillment of the Requirements\\
 for the Degree of MSc Business Technologies
 
-Department of Computer Science \&\\
-Information Systems\\
-Birkbeck College\\
-University of London
-\end{title}
+\vspace{0.5in}
+
+Department of Computer Science \& Information Systems\\
+Birkbeck College, University of London
+
+\vfill
+
+\end{center}
