major changes to structure

--- a/index.tex
+++ b/index.tex
@@ -1,7 +1,7 @@
-\documentclass[12pt,a4paper,oneside,draft]{report}
+\documentclass[12pt,a4paper,oneside,draft,openany,british,chapterprefix=false,bibtotocnumbered]{scrreprt}
 \input{./includes/config.tex}
 % meta
-\title{A Multi-Purpose Recommender System}
+\title{A Multi-Purpose Recommender Framework}
 \author{Halil I. K{\"o}kl{\"u}}
 \date{April 2014}
 \def\supervisor{Nigel Martin}
@@ -21,6 +21,7 @@
 \input{./sections/background.tex}
 \input{./sections/problem.tex}
 \input{./sections/solution.tex}
+\input{./sections/plan.tex}
 \input{./meta/bibl.tex}
 
 \end{document}
