--- a/meta/toc.tex
+++ b/meta/toc.tex
@@ -1,7 +1,8 @@
 \linespread{1}
 \setlength{\parskip}{0ex}
 
-\setcounter{tocdepth}{3}
+%\setcounter{tocdepth}{1}
+\setcounter{tocdepth}{2}
 \tableofcontents
 
 \listoffigures
