--- a/sections/background.tex
+++ b/sections/background.tex
@@ -1,7 +1,47 @@
-\chapter{Background Research}
+\chapter{Background Research: Recommender Systems}
 
-\section{Recommender Systems}
-\section{Types of Recommender Systems}
-\section{Case Studies}
-\subsection{Amazon.com}
-\subsection{Netflix.com}
+This chapter introduces the fundamental concepts of recommender and machine learning systems. Then, different approaches as well as algorithms are discussed. Finally, existing solutions are evaluated.
+
+\section{Definition}
+
+%- Ricci: explosive growth and variety of information available ...
+%- Ricci: recommendations in offline/real life (peer's suggestions for a book, recommendations from previous employers in recruitment, film critics and reviews)
+%- Ricci: importance to online companies, their function, yet users also want
+%- Simplest form ranked lists, personalized
+%- Bounce rate: first impressions are important, do not rely on customer browsing and making familiar with navigation etc.
+%- Personalized emails
+
+% planning
+% - 300 words
+% - idea of a recommender system
+% - fundamental basics of it
+
+\subsection{Machine Learning}
+
+Recommender systems rely on machine learning which is a branch of artificial intelligence (AI). Latter is defined by \citeasnoun{mccarthy07} as \textit{'the science and engineering of making intelligent machines, especially intelligent computer programs'}. In that sense, machine learning enables computers to learn from data passed through it to be able to make predictions about future data. In other words the learning machine tries to generalize. It is based on the assumption that almost all data includes \textit{patterns} -- any repeating regularity that describes the \textit{model} the learning machine is concerned about. This allows learning machines to generalise \cite{segaran07}.
+
+Machine learning has to deal with two significant weaknesses: \textit{misinterpretation} and \textit{overgeneralisation}. The problem of \textit{misinterpretation} usually happens when the learning machine encounters new patterns. In contrast to humans who can rely on their full common knowledge and experience, learning machines can only take their past learning with limited patterns into account. Similarly, \textit{overgeneralisation} suffers from limited patterns as the learning machine may fail to differentiate thus predict inaccurately \cite{segaran07}. The impact of \textit{overgeneralisation} can be reduced by extending the model to understand and consider new patterns such as exceptions. Finally, it can be said that the more learning machines learn the more accurate predictions will become.
+
+\section{Applications}
+
+\section{Techniques}
+
+\subsection{Collaborative Filtering}
+\subsection{Content-Based Filtering}
+\subsection{Hybrids}
+
+\section{Algorithms}
+
+\subsection{Pearson Correlation Coefficient}
+\subsection{Tanimoto Coefficient}
+
+\section{Challenges}
+
+%planning:
+%- 300 words
+%- tight to application
+%- expensive and complex undertaking to get a recommender system
+
+\section{Evaluation of Existing Solutions}
+
+% apache mahout
