--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -1,5 +1,9 @@
 \chapter{Problem Definition}
 
-\section{Challenges of Recommender Systems}
-\section{A Multi-Purpose Recommender System}
-\section{Analysis of Existing Solutions}
+\section{Service-Orientation}
+
+\section{Abstraction}
+
+\section{Interoparability}
+
+\section{Ease of Integration}
