--- a/sections/solution.tex
+++ b/sections/solution.tex
@@ -1,9 +1,34 @@
-\chapter{Developing the Solution}
+\chapter{Technical Solution}
 
-\section{General Architecture}
+% planning: 1000 words
+
+\section{Design \& Architecture}
+
+\subsection{Service-Oriented Design}
+
+\subsection{Multi-Tier Architecture}
+
+\subsubsection{Interface Layer}
+\subsubsection{Configuration Layer}
+\subsubsection{Recommendation Layer}
+\subsubsection{Persistance Layer}
+
+\subsection{Event-Based Exchange}
+
+\subsection{Pluggable Algorithms}
+
+\subsection{Recommendation Definition}
+
+%planning:
+%- 500 words
+%- figure
+%- api layer
+%- configuration layer
+%- engine layer
+%- event based
+%- plugin system
+
 \section{Implementation}
-\section{Demonstration}
-\subsection{eCommerce Storefront}
-\subsection{Movie Browser}
-\section{Testing}
-\section{Schedule}
+
+\subsection{Programming Language}
+\subsection{Database}
