--- a/includes/config.tex
+++ b/includes/config.tex
@@ -1,3 +1,11 @@
 \usepackage{titling}
+\usepackage{harvard}
+\usepackage{url}
+\usepackage{titlesec}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
+
+% spacing
 \input{./includes/spacing.tex}
+
+% chapter style
+\addtokomafont{disposition}{\rmfamily}
