--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,1 +1,19 @@
 \chapter{Introduction}
+
+In this project I will develop a multi-purpose framework for recommender systems.
+
+As a result of the Digital Revolution and the growth of the Internet we now live in a world of information -- so vast that it is difficult for the user to filter what they seek without assisting tools. Search engines -- such as Google and Bing -- have been developed to help finding information which are related to a search phrase. However this requires the user to build the right search phrase in advance. This leads to the thought if meaningful information can be predictively delivered without a search phrase. This problem is what recommender systems try to solve -- yet with different approaches. These recommender systems are usually very tight to the context and architecture of the application. Specifically implemented for particular application, it may require to know and access its database structure as well as fit into same implementation constraints such as programming language or database vendor.
+
+This project aims to research and develop a solution to easily integrate recommender systems into existing applications with minimal coupling and knowledge of each others' implementation details. The loose coupling will be achieved by using an event-based information exchange via application programming interfaces (API). Thanks to its plug-in mechanism the so can be extended with new recommender algorithms. The solution will be evaluated by demonstrating it in two different use cases.
+
+\section{Proposal Structure}
+
+This proposal discusses specific challenges of recommender systems and -- based on the background research as well as evaluation of existing solutions -- proposes a potential solution to overcome them. Design requirements for the proposed solution are examined and resultant technology choices are defined. Finally, a project plan to ensure the project's execution is compiled.
+
+\textit{Section 2} introduces the concepts of machine learning and recommender systems. An overview of recommender approaches as well as algorithms are described.
+
+\textit{Section 3} evaluates current recommender systems and its challenges. Thereupon the proposed solution is characterized.
+
+\textit{Section 4} pictures the architectual design of the solution and defines the technologies to be used. Furthermore the demonstration of the solution in real-world use cases is specified. Finally, a plan is illustrated how to test and evaluate the solution.
+
+\textit{Section 5} lays out a project schedule and alternative paths in case of complications.
