updated writing, new settings, new structure

--- a/includes/config.tex
+++ b/includes/config.tex
@@ -1,7 +1,10 @@
 \usepackage{titling}
-\usepackage{harvard}
-\usepackage{url}
+\usepackage{natbib}
+\usepackage{har2nat}
+\usepackage{underscore}
 \usepackage{titlesec}
+\usepackage{graphicx}
+\usepackage[export]{adjustbox}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
 
 % spacing
@@ -9,3 +12,6 @@
 
 % chapter style
 \addtokomafont{disposition}{\rmfamily}
+
+% images
+\graphicspath{{media/}}
