--- a/includes/references.bib
+++ b/includes/references.bib
@@ -1,8 +1,8 @@
-@BOOK{segaran07,
-    AUTHOR    = {Segaran, Toby},
-    TITLE     = {Programming Collective Intelligence: Building Smart Web 2.0 Applications},
-    PUBLISHER = {O'Reilly Media, Inc.},
-    YEAR      = {2007}
+@ARTICLE{linden03,
+    AUTHOR    = {Linden, Greg and Smith, Brent and York, Jeremy},
+    TITLE     = {Amazon.com recommendations: Item-to-item collaborative filtering},
+    PUBLISHER = {Internet Computing, IEEE 7.1},
+    YEAR      = {2003}
 }
 
 @MISC{mccarthy07,
@@ -10,5 +10,26 @@
     title        = {What Is Artificial Intelligence?},
     month        = nov,
     year         = {2007},
-    howpublished = {\url{http://www-formal.stanford.edu/jmc/whatisai/whatisai.html}}
+    howpublished = {http://www-formal.stanford.edu/jmc/whatisai/whatisai.html}
+}
+
+@MISC{netflix09,
+    title        = {Netflix Prize: \$1 Million Paid, Another Million Now Up For Grabs},
+    month        = sep,
+    year         = {2009},
+    howpublished = {http://blog.netflix.com/2009\_09\_01\_archive.html}
+}
+
+@BOOK{ricci11,
+    AUTHOR    = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+    TITLE     = {Introduction to Recommender Systems Handbook},
+    PUBLISHER = {Springer US},
+    YEAR      = {2011}
+}
+
+@BOOK{segaran07,
+    AUTHOR    = {Segaran, Toby},
+    TITLE     = {Programming Collective Intelligence: Building Smart Web 2.0 Applications},
+    PUBLISHER = {O'Reilly Media, Inc.},
+    YEAR      = {2007}
 }
