--- a/index.tex
+++ b/index.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper,oneside,draft,openany,british,chapterprefix=false,bibtotocnumbered]{scrreprt}
+\documentclass[12pt,a4paper,oneside,openany,chapterprefix=false,bibliography=totocnumbered]{scrreprt}
 \input{./includes/config.tex}
 % meta
 \title{A Multi-Purpose Recommender Framework}
