--- a/meta/bibl.tex
+++ b/meta/bibl.tex
@@ -1,3 +1,4 @@
 \renewcommand\bibname{References}
+\small
 \bibliography{includes/references}
-\bibliographystyle{apsr}
+\bibliographystyle{apalike}
