--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -1,9 +1,18 @@
 \chapter{Problem Definition}
 
-\section{Service-Orientation}
+\section{Challenges of Recommender Systems}
 
-\section{Abstraction}
+%planning:
+%- 300 words
+%- tight to application
+%- expensive and complex undertaking to get a recommender system
 
-\section{Interoparability}
+\section{Multi-Purpose Approach}
 
-\section{Ease of Integration}
+\subsection{Service-Orientation}
+
+\subsection{Abstraction}
+
+\subsection{Interoparability}
+
+\subsection{Ease of Integration}
