--- a/sections/solution.tex
+++ b/sections/solution.tex
@@ -13,11 +13,11 @@
 \subsubsection{Recommendation Layer}
 \subsubsection{Persistance Layer}
 
-\subsection{Event-Based Exchange}
+\subsection{Event System}
 
-\subsection{Pluggable Algorithms}
+\subsection{Recommender Plugin System}
 
-\subsection{Recommendation Definition}
+\subsection{Recommendation Models}
 
 %planning:
 %- 500 words
@@ -32,3 +32,4 @@
 
 \subsection{Programming Language}
 \subsection{Database}
+\subsection{Other Vendors}
